FISH-8652: Downgrade charset in DeleteCommandProcessor.